// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Badge All 1`] = `
<div
  className="flex flex-col items-start space-y-1"
>
  <div
    className="inline-block rounded-xl px-2 py-0.5 text-xs whitespace-nowrap bg-primary-300"
    style={Object {}}
  >
    Текст
  </div>
  <div
    className="inline-block rounded-xl px-2 py-0.5 text-xs whitespace-nowrap bg-accent-500"
    style={Object {}}
  >
    Текст
  </div>
</div>
`;

exports[`Storyshots Components/Badge Basic 1`] = `
<div
  className="inline-block rounded-xl px-2 py-0.5 text-xs whitespace-nowrap bg-primary-300"
  style={Object {}}
>
  Текст
</div>
`;
